# strongswan

./: configure.ac
scripts/: test.sh
src/libcharon/config/: ike_cfg.c  ike_cfg.h
src/libcharon/encoding/: message.c
src/libcharon/encoding/payloads/: payload.h  proposal_substructure.c
src/libcharon/sa/: ike_sa_manager.c
src/libcharon/sa/ikev2/tasks/: child_create.c  ike_init.c
src/libcharon/tests/: Makefile.am
src/libcharon/tests/suites/: test_ike_rekey.c
src/libcharon/tests/utils/: exchange_test_helper.c
src/libstrongswan/: Makefile.am
testing/: Makefile.am
testing/scripts/: build-certs  build-certs-chroot
